2004-03-24  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_add_smime_capability): New.
	(ksba_cms_release): Free the capability list.
	(store_smime_capability_sequence): New.
	(build_signed_data_attributes): Include the smime capabilities.
	* cms.h (oidparmlist_s): New.
	(ksba_cms_s): Add element CAPABILITY_LIST.
	* der-encoder.c (_ksba_der_store_sequence): New.
	* asn1-func.c (_ksba_asn_is_primitive): New dummy type PRE_SEQUENCE.
	* der-encoder.c (set_nhdr_and_len, copy_nhdr_and_len): Support it.

2004-03-17  Werner Koch  <wk@gnupg.org>

	* ber-help.c (_ksba_ber_parse_tl): Check for length overflow.
	(_ksba_ber_read_tl): Ditto.

2004-03-16  Werner Koch  <wk@gnupg.org>

	* ocsp.c (ksba_ocsp_get_responder_id, ksba_ocsp_get_cert): New.

2004-03-15  Werner Koch  <wk@gnupg.org>

	* Makefile.am: Support for version scripts.
	* libksba.vers: New.

	* ocsp.c (parse_response): Fixed parsing of optional certificates.

2004-03-09  Werner Koch  <wk@gnupg.org>

	* ksba.h (ksba_set_hash_buffer_function): Add missing prototype.

2004-02-20  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_ext_key_usages): New.
	(ksba_cert_get_auth_key_id): Fix for the case that there is only
	the KeyIdentifier.

2004-02-13  Werner Koch  <wk@gnupg.org>

	* reader.c, ksba.h (ksba_reader_clear): New.

2004-02-12  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_identify): Detect pkcs#12.
	* ksba.h: Add KSBA_CT_PCKS12. 

2004-01-29  Werner Koch  <wk@gnupg.org>

	* cms.c (build_signed_data_attributes): Arggg; noticed that severe
	bug shortly after the last release.  Fixed wrong array size passed
	to qsort.

2004-01-28  Werner Koch  <wk@gnupg.org>

	* dn.c: Updated the table and changed a few names only used for
	String->DER.  Added a source specifier as a replacement for the
	allowed_by_rfc2253 field.

2004-01-19  Werner Koch  <wk@gnupg.org>

	* cms.c (build_signed_data_attributes): Argh. We need to sort the
	attributes.
	(compare_attrarray): New.

2003-12-19  Werner Koch  <wk@gnupg.org>
